2007-06-09  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Added Albanian translation.

2007-06-03  Priit Laes  <plaes@svn.gnome.org>

	* et.po: Updated Estonian translation by Ivar Smolin <okul@linux.ee>.

2007-05-30  Priit Laes  <plaes@svn.gnome.org>

	* et.po: Updated Estonian translation by Ivar Smolin <okul@linux.ee>.

2007-05-28  Runa Bhattacharjee <runabh@gmail.com>

	* bn_IN.po: Added Bengali India Translation
	* LINGUAS: Added Bengali India (bn_IN) to the list of languages.

2007-05-15  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gl.po: Updated Galician Translation.

2007-05-11  Subhransu Behera  <arya_subhransu@yahoo.co.in>

	* or.po: Updated Oriya Translation.

2007-05-11  Subhransu Behera  <arya_subhransu@yahoo.co.in>

	* or.po: Added and Updated Oriya Translation.

2007-05-10  Subhransu Behera  <arya_subhransu@yahoo.co.in>

	* LINGUAS: Added Oriya (or) to the list.

2007-04-15  Thomas Wood  <thos@gnome.org>

	* LINGUAS: Add hu translation to LINGUAS

2007-04-12  Gintautas Miliauskas  <gintas@akl.lt>

	* lt.po: Added Lithuanian translation.
	* LINGUAS: Added Lithuanian (lt) to the list.

2007-04-12  Priit Laes  <plaes@svn.gnome.org>

	* et.po: Added Estonian translation by Ivar Smolin <okul@linux.ee>.
	* LINGUAS: Added Estonian (et) to the list.

2007-04-09  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation added.

2007-04-03  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* pt_BR.po: Fix in Brazilian Portuguese translation.

2007-04-03  A S Alam <aalam@users.sf.net>

	* pa.po: Punjabi Translation Added
	* LINGUAS: Add pa to list

2007-04-01  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* LINGUAS: Added pt_BR.
	* pt_BR.po: Added Brazilian Portuguese translation by Washington
	Ferreira Lins Neto <washington-lins@uol.com.br> and me, Leonardo
	Ferreira Fontenelle <leo.fontenelle@gmail.com>.

2007-03-29  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* LINGUAS: Add 'es'.