@@ -1,9 +1,9 @@
 schema/clearlooks.xml.in
-schema/crux.xml.in
+schema/crux-engine.xml.in
 schema/glide.xml.in
-schema/hc.xml.in
+schema/hcengine.xml.in
 schema/industrial.xml.in
 schema/mist.xml.in
-schema/redmond.xml.in
+schema/redmond95.xml.in
 schema/smooth.xml.in
 schema/thinice.xml.in
